<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.lingxi</groupId>
    <artifactId>lingxi-ai-hub</artifactId>
    <version>3.6.7</version>

    <name>LingXi-AI-Hub</name>
    <url>http://www.lingxi-ai-hub.com</url>
    <description>LingXi AI Hub</description>

    <properties>
        <cloud.version>3.6.7</cloud.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <lombok.version>1.18.38</lombok.version>
        <spring-boot.version>3.5.11</spring-boot.version>
        <spring-ai.version>1.0.6</spring-ai.version>
        <spring-boot-admin.version>3.5.8</spring-boot-admin.version>
        <mybatis-spring.version>3.0.5</mybatis-spring.version>
        <kaptcha.version>2.3.3</kaptcha.version>
        <pagehelper.boot.version>2.1.0</pagehelper.boot.version>
        <druid.version>1.2.27</druid.version>
        <dynamic-ds.version>4.5.0</dynamic-ds.version>
        <commons.io.version>2.21.0</commons.io.version>
        <velocity.version>2.3</velocity.version>
        <fastjson.version>2.0.61</fastjson.version>
        <jjwt.version>0.9.1</jjwt.version>
        <minio.version>8.2.2</minio.version>
        <tencent.cos.version>5.6.269</tencent.cos.version>
        <poi.version>4.1.2</poi.version>
        <springdoc.version>2.8.16</springdoc.version>
        <transmittable-thread-local.version>2.14.5</transmittable-thread-local.version>
        <langChain4j.version>0.34.0</langChain4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>pro.fessional</groupId>
                <artifactId>kaptcha</artifactId>
                <version>${kaptcha.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.boot.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>mybatis-spring</artifactId>
                        <groupId>org.mybatis</groupId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>5.8.32</version>
            </dependency>

            <dependency>
                <groupId>org.apache.velocity</groupId>
                <artifactId>velocity-engine-core</artifactId>
                <version>${velocity.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.fastjson2</groupId>
                <artifactId>fastjson2</artifactId>
                <version>${fastjson.version}</version>
            </dependency>

            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt</artifactId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>transmittable-thread-local</artifactId>
                <version>${transmittable-thread-local.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-core</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-swagger</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-security</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-sensitive</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-datascope</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-datasource</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-log</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-common-redis</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-api-system</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-api-knowledge</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-api-ai</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-api-oa</artifactId>
                <version>${cloud.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lingxi</groupId>
                <artifactId>lingxi-modules-file</artifactId>
                <version>${cloud.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>lingxi-common</module>
        <module>lingxi-api</module>
        <module>lingxi-auth</module>
        <module>lingxi-modules</module>
        <module>lingxi-ai</module>
        <module>lingxi-admin</module>
    </modules>
    <packaging>pom</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>aliyun nexus</name>
            <url>https://maven.aliyun.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
